# To-Do-List-App

./: .tool-versions  Cargo.toml  README.md  package.json
.devcontainer/: devcontainer.json
apps/desktop-tauri/: index.html  package.json
apps/desktop-tauri/src/: App.css  App.tsx  api.ts  styles.css
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/src/: main.rs
crates/todo-cli/: Cargo.toml
crates/todo-cli/src/: main.rs
crates/todo-core/: Cargo.toml
crates/todo-core/src/: db.rs  lib.rs  log.rs  model.rs
crates/todo-sync/: Cargo.toml
crates/todo-sync/src/: main.rs
scripts/: bootstrap.sh
