[package]
name = "todo-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true, features = ["sqlite"] }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
